lib/src/compiler/tests/testdata/errors/40.out
error[E112]: invalid regular expression
 --> line:3:11
  |
3 |     $a = /(abc/
  |           ^ unclosed group
  |